Ajuste servicio usuario paginado completo